fixed some spacing Problems on the dialogs

--- a/styles/main.less
+++ b/styles/main.less
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: theme("fontFamily.roboto");
   font-size: 16px;
+  line-height: 1.2;
 
   @media screen and (min-width: theme("screens.lg")) {
     font-size: 18px;
